--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
-.App {
-  text-align: center;
-}
+
 body{
-  font-family: 'Nunito', sans-serif;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
   height: 100vh;
-  color: #7F5283;
-  background-image: url(https://images.pexels.com/photos/1153655/pexels-photo-1153655.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  color: white;
+  background-image: url(https://images.unsplash.com/photo-1585314062340-f1a5a7c9328d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80);
   background-position: center;
   background-size: cover;
 }
@@ -14,20 +13,24 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  text-align: center;
-  background-color: #fefbf6e0;
-  text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
-  0px -5px 35px rgba(255,255,255,0.3);
   border-radius: 5px;
   width: 300px;
   margin: 0 auto;
   padding: 20px;
-  min-height: 80vh;  
+  min-height: 90vh;  
   margin-bottom: 0px;
 }
 
 h1{
   font-size: 40px;
+  font-weight: lighter;
+}
+
+i{
+  padding: 5px;
+  font-size: 25px;
+}
+i:hover{
   text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
   0px -5px 35px rgba(255,255,255,0.3);
 }
@@ -35,74 +38,101 @@ h1{
 .addTaskDiv{
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 input{
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 23px;
   height: 40px;
-  width: 250px;
+  width: 260px;
   border-radius: 5px;
   border: none;
-  box-shadow: 2px 8px 6px rgba(0,0,0,0.2),
-  0px -5px 35px rgba(255,255,255,0.3);
+
 }
 .addBtn{
-  background-color: #A6D1E6;
-  font-family: 'Nunito', sans-serif;
+  background-color: #00000000;
+  color: white;
+  font-size: 45px;
+  color: #d7c223;
+}
+
+.btn{
+  background-position: center;
+  background-size: cover;
+  background-image: url(https://images.unsplash.com/photo-1606942666813-963a0f912b31?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);
+  font-family: 'Montserrat', sans-serif;
   font-size: 23px;
-  height: 40px;
-  width: 40px;
+  padding: 10px;
   border-radius: 5px;
   border: none;
+  margin-bottom: 20px;
+}
+
+.deleteDoneBtn{
+  border: 1px solid white;
+  font-family: 'Montserrat', sans-serif;
+  background-color: rgba(255, 255, 255, 0);
+  font-size: 18px;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 20px;
+}
+
+button:hover{
   box-shadow: 2px 8px 6px rgba(0,0,0,0.2),
   0px -5px 35px rgba(255,255,255,0.3);
-}
-.deleteAllBtn{
-font-family: 'Nunito', sans-serif;
-background-color: #7F5283 ;
-font-size: 23px;
-padding: 10px;
-border-radius: 5px;
-border: none;
-box-shadow: 2px 8px 6px rgba(0,0,0,0.2),
-0px -5px 35px rgba(255,255,255,0.3);
-margin-bottom: 20px;
-}
-.deleteDoneBtn{
-  font-family: 'Nunito', sans-serif;
-background-color: #A6D1E6 ;
-font-size: 18px;
-padding: 10px;
-border-radius: 5px;
-border: none;
-box-shadow: 2px 8px 6px rgba(0,0,0,0.2),
-0px -5px 35px rgba(255,255,255,0.3);
-margin-bottom: 20px;
 }
 
 ul{
   padding-left: 0px;
 }
 
-li{
-  margin: 0 auto;
+.liNote{
   display: flex;
   justify-content: space-between;
   width: 300px;
   font-size: 25px;
   word-wrap:break-word;
-  background-color: #A6D1E6;
-  color: black;
+  background-color: #ffffff00;
+  color: white;
   padding: 5px;
   margin-top: 5px;
   border-radius: 5px;
-  border: none;
-  box-shadow: 2px 8px 6px rgba(0,0,0,0.2),
-  0px -5px 35px rgba(255,255,255,0.3);
+  border: 1px solid white;
 }
 
-.liTwo{
-  text-decoration: line-through;
-  color: #7F5283;
+.liDelete{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
+  border: 1px solid rgb(0, 0, 0);
+  margin: 5px;
+  font-size: 25px;
 }
+
+.liDelete p{
+  text-decoration: line-through;
+  color: #000000;
+  padding-left: 10px;
+  margin: 3px;
+}
+.liDelete i{
+  color: #000000;
+}
+
+.displayNone{
+  display: none;
+}
+
+.displayBlock{
+  margin: 0 auto;
+  background-position: center;
+  background-size: cover;
+  background-image: url(https://images.unsplash.com/photo-1606942666813-963a0f912b31?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);
+  max-width: 350px;
+  padding: 5px;
+}
+
+
